# cpp_project_template

./: .clang-format  CMakeLists.txt
cmake/: Conan.cmake
src/: CMakeLists.txt  main.cpp
